changes in css and in projects.html

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Projects</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -16,10 +16,10 @@
         <div class="nav-bar">
             <ul>
                 <li>
-                    <a  href="index.html">home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a id="activeTab" href="projects.html">projects</a>
+                    <a id="activeTab" href="projects.html">Projects</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
@@ -31,42 +31,37 @@
         </div>
     </header>
 
-    <div class="highlighted-section">
-        <div class="left">
-          <img src="image/projects_img.svg" class="hero-img">
+    <main>
+        <div class="projects">
+            <div class="project">
+                <img src="image/projects_img.svg" class="hero-img" alt="Project 1">
+                <h3>Project 1</h3>
+                <p>Description of Project 1.</p>
+            </div>
+            <div class="project">
+                <img src="image/p2.svg" class="hero-img" alt="Project 2">
+                <h3>Project 2</h3>
+                <p>Description of Project 2.</p>
+            </div>
+            <div class="project">
+                <img src="image/p3.svg" class="hero-img" alt="Project 3">
+                <h3>Project 3</h3>
+                <p>Description of Project 3.</p>
+            </div>
+            <div class="project">
+              <img src="image/socials_img.svg" class="hero-img" alt="Project 3">
+              <h3>Project 3</h3>
+              <p>Description of Project 3.</p>
+          </div>
         </div>
-        <div class="right">
-          <h3>Projects1</h3>
-          <p></p>
-        </div>
-      </div>
+    </main>
 
-      <div class="highlighted-section">
-        <div class="left">
-          <img src="image/p2.svg" class="hero-img">
-        </div>
-        <div class="right">
-          <h3>Projects2</h3>
-          <p></p>
-        </div>
-      </div>
-
-      <div class="highlighted-section">
-        <div class="left">
-          <img src="image/p3.svg" class="hero-img">
-        </div>
-        <div class="right">
-          <h3>Projects3</h3>
-          <p></p>
-        </div>
-      </div>
-
-    <section class="footer">
+    <footer class="footer">
         <div class="socials">
             <a href="https://twitter.com/jayparmar2205"><i class="fab fa-twitter"></i></a>
             <a href="https://github.com/JayParmar049"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/jay-parmar-598a03244"><i class="fab fa-linkedin"></i></a>
         </div>
-    </section>
+    </footer>
 </body>
 </html>
