conatct page added

--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmF/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -17,10 +16,10 @@
         <div class="nav-bar">
             <ul>
                 <li>
-                    <a  href="index.html">home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="projects.html">projects</a>
+                    <a href="projects.html">Projects</a>
                 </li>
                 <li>
                     <a id="activeTab" href="contact.html">Contact</a>
@@ -31,12 +30,36 @@
             </ul>
         </div>
     </header>
-    <section class="footer">
+
+    <main>
+        <div class="contact-container">
+            <h1>Contact Me</h1>
+            <ul class="contact-info">
+                <li>
+                    <a href="https://www.instagram.com/jayparmar2205" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+                </li>
+                <li>
+                    <i class="fas fa-phone-alt"></i> +123 456 7890
+                </li>
+                <li>
+                    <a href="https://twitter.com/jayparmar2205" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+                </li>
+                <li>
+                    <a href="https://github.com/JayParmar049" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/jay-parmar-598a03244" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                </li>
+            </ul>
+        </div>
+    </main>
+
+    <footer class="footer">
         <div class="socials">
             <a href="https://twitter.com/jayparmar2205"><i class="fab fa-twitter"></i></a>
             <a href="https://github.com/JayParmar049"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/jay-parmar-598a03244"><i class="fab fa-linkedin"></i></a>
         </div>
-    </section>
+    </footer>
 </body>
 </html>
